--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 # compiled output
 /dist
-/node_modules
 /build
+dist/
+build/
+
+# Dependencies
+node_modules/
+backend/node_modules/
+frontend/node_modules/
 
 # Logs
 logs
@@ -18,6 +24,8 @@ lerna-debug.log*
 # Tests
 /coverage
 /.nyc_output
+backend/coverage/
+frontend/coverage/
 
 # IDEs and editors
 /.idea
@@ -41,6 +49,8 @@ lerna-debug.log*
 .env.test.local
 .env.production.local
 .env.local
+backend/.env
+frontend/.env
 
 # temp directory
 .temp
