--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,3 +10,9 @@ FRONTEND_URL=http://localhost:5173
 
 # WebSocket Configuration
 WS_PORT=3001
+
+# Database Configuration
+DATABASE_URL="file:./dev.db"
+
+# Data Retention Configuration
+DATA_RETENTION_DAYS=7
