--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,9 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Kamal deployment
+.kamal/secrets-*
+.kamal/hooks/*
+.kamal/secrets
+
