--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,3 @@
 # Backend API Configuration
-VITE_API_URL=http://localhost:3001
-VITE_WS_URL=http://localhost:3001
+VITE_API_URL=http://localhost:3001/api
+VITE_WS_URL=http://localhost:3001/crypto
